Fix animation bug on mobile

--- a/client/src/styles/Accordion.scss
+++ b/client/src/styles/Accordion.scss
@@ -21,7 +21,7 @@ details.accordion {
     @include for-tablet-portrait-up {
       .icon {
         transition: transform 0.2s linear;
-        transform: rotateX(180deg) translateY(-3px);
+        transform: scaleY(-1) translateY(-3px);
       }
     }
   }
@@ -33,7 +33,7 @@ details.accordion {
     @include for-tablet-portrait-up {
       .icon {
         transition: transform 0.2s linear;
-        transform: rotateX(0deg) translateY(0px);
+        transform: translateY(0px);
       }
     }
   }
